# Ledger-of-Trades-Peer-to-Peer-Skill-Bartering-on-Stellar-Soroban

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs  test.rs
contracts/trade/: Cargo.toml
contracts/trade/src/: lib.rs  test.rs
docs/: DEMO_SCRIPT.md  SCREENSHOT_CHECKLIST.md
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Banner.jsx  EventFeed.jsx  Hero.jsx  LedgerEntry.jsx  NavBar.jsx  ProposeTradeForm.jsx  ReputationCard.jsx  Skeleton.jsx  TradeLookup.jsx  TransactionOverlay.jsx
frontend/src/contracts/: config.js  tradeClient.js
frontend/src/hooks/: useContractEvents.js  useWallet.js
frontend/src/test/: LedgerEntry.test.jsx  ReputationCard.test.jsx
scripts/: deploy.sh  sample_interaction.sh
