[package]
name = "reputation-registry"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.11"

[dev-dependencies]
soroban-sdk = { version = "22.0.11", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
