[package]
name = "skill-trade"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "22.0.0"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
reputation-registry = { path = "../reputation" }

[features]
testutils = ["soroban-sdk/testutils"]
